# notification-daemon-x

./: Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  notification-daemon.desktop.in.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  km.po  kn.po  ko.po  lt.po  lv.po  mr.po  ms.po  (+27 more)
src/: Makefile.am  Makefile.in  daemon.c  daemon.h  nd-bubble.c  nd-bubble.h  nd-notification-box.c  nd-notification-box.h  nd-notification.c  nd-notification.h  nd-queue.c  nd-queue.h  nd-stack.c  nd-stack.h
